adding this abomination of a workaround

--- a/TradingTelegramService/Properties/launchSettings.json
+++ b/TradingTelegramService/Properties/launchSettings.json
@@ -1,8 +1,10 @@
 {
   "profiles": {
-    
+
     "https": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
